java/operator/org.eclipse.theia.cloud.operator/src/main/resources/templateHTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: placeholder-route-name
  namespace: placeholder-namespace
  ownerReferences:
    - apiVersion: theia.cloud/v1beta9
      kind: AppDefinition
      name: placeholder
      uid: placeholder
spec:
  parentRefs:
    - name: placeholder-gateway-name
  hostnames: placeholder-hostnames
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: placeholder-path
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: placeholder-base-path
      backendRefs:
        - name: placeholder-service-name
          port: placeholder-service-port
